@@ -1,0 +1,28 @@
+################################################################################
+#    Creme is a free/open-source Customer Relationship Management software
+#    Copyright (C) 2024  Hybird
+#
+#    This program is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU Affero General Public License as published by
+#    the Free Software Foundation, either version 3 of the License, or
+#    (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU Affero General Public License for more details.
+#
+#    You should have received a copy of the GNU Affero General Public License
+#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+################################################################################
+
+from creme.creme_core.auth import STAFF_PERM
+
+from ..bricks import FileRefsBrick
+from .base import ConfigPortal
+
+
+class Portal(ConfigPortal):
+    template_name = 'creme_config/portals/file-ref.html'
+    brick_classes = [FileRefsBrick]
+    permissions = STAFF_PERM
