@@ -690,10 +690,11 @@ class Migration(migrations.Migration):
             name='FileRef',
             fields=[
                 ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
-                ('filedata', models.FileField(max_length=200, upload_to='')),
+                ('filedata', models.FileField(verbose_name='Path', max_length=200, upload_to='')),
                 ('basename', models.CharField(max_length=200)),
-                ('created', models.DateTimeField(auto_now_add=True)),
-                ('temporary', models.BooleanField(default=True, verbose_name='Is temporary?')),
+                ('created', models.DateTimeField(verbose_name='Created', auto_now_add=True)),
+                # ('temporary', models.BooleanField(default=True, verbose_name='Is temporary?')),
+                ('temporary', models.BooleanField(default=True, verbose_name='To be deleted by the job?')),
                 ('user', core_fields.CremeUserForeignKey(null=True, to=settings.AUTH_USER_MODEL, verbose_name='Owner user')),
                 ('extra_data', models.JSONField(default=dict, editable=False)),
             ],
